Bug 160517 - FILESAVE: formatting of chart titles and labels is not preserved on saving ODS (super-sub-scripts, underline, bold, italics, font size)
Summary: FILESAVE: formatting of chart titles and labels is not preserved on saving OD...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL: https://bugs.documentfoundation.org/s...
Whiteboard: target:24.8.0 target:25.2.0 inRelease...
Keywords:
Depends on:
Blocks: Chart-Labels
  Show dependency treegraph
 
Reported: 2024-04-04 09:53 UTC by Piotr Osada
Modified: 2025-08-26 14:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
tdf#160517 Excel 365 vs LO 24.2 chart text formatting.png (17 bytes, text/plain)
2024-04-04 10:40 UTC, Piotr Osada
Details
tdf#160517 Excel 365 vs LO 24.2 chart text formatting.png (90.23 KB, image/png)
2025-08-26 14:14 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Osada 2024-04-04 09:53:41 UTC
Description:
Superscripts, subscripts, underline, bold, italics, font size are not saved in ODS files.

As in attachment 192451 [details].

Topic similar to: https://bugs.documentfoundation.org/show_bug.cgi?id=78027

Steps to Reproduce:
1. Open attachment 192452 [details], and save as ODT
2. Reopen saved ODT

Actual Results:
All chart formatting is lost.

Expected Results:
It should be preserved.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7b9905df455b47977968a185a7c43f35541e018b
CPU threads: 8; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded
Comment 1 Piotr Osada 2024-04-04 09:58:18 UTC
FILESAVE: formatting of chart titles and labels is not preserved on saving ODS (super-sub-scripts, underline, bold, italics, font size)
Comment 2 Piotr Osada 2024-04-04 10:40:09 UTC
Created attachment 193488 [details]
tdf#160517 Excel 365 vs LO 24.2 chart text formatting.png

 tdf#78027 Excel 365 vs LO 24.2 chart text formatting.png
Comment 3 Commit Notification 2024-04-18 16:08:08 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d7214aba95bbdcbd40e87ef50fc66f2e2ec4f5ff

tdf#160517 - chart odf: import/export formatted chart titles

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-11-22 20:58:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/869fff459cbee6a2edadd5c24f2b65c199712de6

Related: tdf#160517 - chart odf: import/export formatted chart titles

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Piotr Osada 2025-08-26 14:14:43 UTC
Created attachment 202521 [details]
tdf#160517 Excel 365 vs LO 24.2 chart text formatting.png

Previous version had TXT with attachment number.