Related: tdf#160517 - chart odf: import/export formatted chart titles

No need to check chart title paragraph style name and ID, since its
never exists.

follow-up of:
d7214aba95bbdcbd40e87ef50fc66f2e2ec4f5ff
6fdad723729a458eaff7ca509cb202ad355832be

Change-Id: Ieffe3026adc848cfbf3a847b4f876b5aa2e2a026
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177011
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins