xmloff/source/chart/SchXMLParagraphContext.hxx
@@ -54,7 +54,6 @@ class SchXMLTitleParaContext : public SvXMLImportContext
 {
 private:
     std::vector<std::pair<OUString, OUString>>& mrParaText;
-    OUString* mpId;
     OUStringBuffer maBuffer;
     OUString maStyleName;
 
@@ -63,9 +62,6 @@ public:
                             std::vector<std::pair<OUString, OUString>>& rParaText);
     virtual ~SchXMLTitleParaContext() override;
 
-    virtual void SAL_CALL startFastElement(
-        sal_Int32 nElement,
-        const css::uno::Reference< css::xml::sax::XFastAttributeList >& xAttrList ) override;
     virtual void SAL_CALL endFastElement(sal_Int32 nElement) override;
     virtual void SAL_CALL characters( const OUString& rChars ) override;
 
